Closed Bug 884065 Opened 11 years ago Closed 11 years ago

Don't finalize a context if it has active rooters

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch v0 (obsolete) — Splinter Review
I was able to start a browser, go to wikipedia, then shutdown without hitting this assertion. Throwing it at try now:

https://tbpl.mozilla.org/?tree=Try&rev=7dd583be2ded
Attachment #763810 - Flags: review?(sphink)
Attachment #763810 - Flags: feedback?(bobbyholley+bmo)
Comment on attachment 763810 [details] [diff] [review]
v0

This seems to be the wrong patch. Will get back to you once I make sure I actually tested the patch with the assertions in it.
Attachment #763810 - Flags: review?(sphink)
Attachment #763810 - Flags: feedback?(bobbyholley+bmo)
Rebuilt after updating the patch and the browser still seems to run and exit cleanly.
Attachment #763810 - Attachment is obsolete: true
Attachment #764252 - Flags: review?(sphink)
Attachment #764252 - Flags: feedback?(bobbyholley+bmo)
Attachment #764252 - Flags: review?(sphink) → review+
Comment on attachment 764252 [details] [diff] [review]
v1: this time with actual content

Review of attachment 764252 [details] [diff] [review]:
-----------------------------------------------------------------

lgtm
Attachment #764252 - Flags: feedback?(bobbyholley+bmo) → feedback+
Excellent! Lets Try and see how much my "test" missed:

https://tbpl.mozilla.org/?tree=Try&rev=12c7309edbe6
Well, the orange looks like orange-factor to me, so lets do this:

https://hg.mozilla.org/integration/mozilla-inbound/rev/43f6621f6873
https://hg.mozilla.org/mozilla-central/rev/43f6621f6873
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: