Bug 884065 - Assert if JS_DestroyContext is called with active exact rooters; r=sfink